added ReadMe and page header&footer

--- a/GreenSprout/index.html
+++ b/GreenSprout/index.html
@@ -57,11 +57,11 @@
                                 Store
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">New Arrive</a></li>
-                                <li><a class="dropdown-item" href="#">Air Plants</a></li>
-                                <li><a class="dropdown-item" href="#">Houseplants</a></li>
-                                <li><a class="dropdown-item" href="#">Succlent</a></li>
-                                <li><a class="dropdown-item" href="#">Pots & Accessories</a></li>
+                                <li><a class="dropdown-item" href="store.html">New Arrive</a></li>
+                                <li><a class="dropdown-item" href="store.html">Air Plants</a></li>
+                                <li><a class="dropdown-item" href="store.html">Houseplants</a></li>
+                                <li><a class="dropdown-item" href="store.html">Succlent</a></li>
+                                <li><a class="dropdown-item" href="store.html">Pots & Accessories</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -160,7 +160,8 @@
 
                 <div class="row">
                     <div class="col">
-                        <img src="./img/badge.png" alt="Top Quality">
+                        <img src="./img/badge.png" alt="Top Quality" style="animation-duration: 3s;
+                        animation-name: slidein">
                         <p>Top Quality</p>
                         <span><small>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quia dolore doloribus
                                 sunt,eniam debitis placeat esse neque maxime aliquid commodi reprehenderit.
