--- a/Lab/316.4/index.html
+++ b/Lab/316.4/index.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/d8f052c6cf.js"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="src/index.js"></script>
+    <script defer type="text/javascript" src="src/index.js"></script>
   </head>
   <body>
     <!-- Container for entire form. -->
@@ -20,7 +20,10 @@
 
         <!-- Registration Form -->
         <form id="registration">
-          <input name="username" type="text" placeholder="Username" />
+          
+          <!-- The username cannot be blank. 
+          The username must be at least -->
+          <input name="username" type="text" placeholder="Username" minlength="4" required />
           <span class="input-icon"><i class="fa-solid fa-user"></i></span><br />
 
           <input name="email" type="text" placeholder="Email" />
