--- a/Lab/316.4/index.html
+++ b/Lab/316.4/index.html
@@ -30,7 +30,7 @@
           <span class="input-icon"><i class="fa-solid fa-envelope"></i></span
           ><br />
 
-          <input name="password" type="text" placeholder="Password" />
+          <input name="password" type="text" placeholder="Password" minlength="12"/>
           <span class="input-icon"><i class="fa-solid fa-key"></i></span><br />
 
           <input
