get input pname.value by add button

--- a/The Document Object Model/index.html
+++ b/The Document Object Model/index.html
@@ -6,63 +6,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plant Swap</title>
     <link rel="stylesheet" href="./src/style.css">
-    <script src="./src/index.js"></script>
-    <h1>Plant Exchange</h1>
-    <hr>
-    <nav>
-        <a>Swap List</a>
-        <a>My WishLish</a>
-        <a>Plant Diagnose List</a>
-    </nav>
-    <hr>
+    <!-- <script defer src="./src/index.js"></script> -->
 </head>
 
 <body>
+    <h1>Plant Exchange</h1>
+    <hr>
+    <nav>
+        <a href="#">Swap List</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Plant Diagnose List</a>
+    </nav>
+    <hr>
+
     <div class="form-container">
+
         <form>
-            <!-- <label>First Name: </label>
-            <input type="text" id="fname" name="fname">
+            <label for="pname">Plant Name: <input type="text" id="pname" name="pname" required></label>
 
-            <label>Last Name: </label>
-            <input type="text" id="lname" name="lname"> -->
-
-            <label>Plant Name: <input type="text" id="pname" name="pname"> </label>
-            <label>Choose a Plant Type:
-                <select id="ptype" name="ptype">
+            <label for="ptype">Choose a Plant Type:
+                <select id="ptype" name="ptype" required>
                     <option value="in-plant">Indoor Plant</option>
                     <option value="out-plant">Outdoor Plant</option>
                     <option value="seeds">Seed</option>
                 </select>
             </label>
-            <label>Plant Height: <input type="text" id="pheight" name="pheight"></label>
-            <label>Plant Width: <input type="text" id="pwidth" name="pwidth"></label>
+
+            <label for="pheight">Plant Height: <input type="number" id="pheight" name="pheight"></label>
+
+            <label for="pwidth">Plant Width: <input type="number" id="pwidth" name="pwidth"></label>
+
             <label>Plant Health Condition:
                 <input type="checkbox" id="condition1" name="condition1" value="condition1">
-                <label for="option1"> Healthy</label>
+                <label for="condition1"> Healthy</label>
                 <input type="checkbox" id="condition2" name="condition2" value="condition2">
-                <label for="option2"> Need more love</label>
+                <label for="condition2"> Need more love</label>
                 <input type="checkbox" id="condition3" name="condition3" value="condition3">
-                <label for="option2"> Sick </label>
-                <input type="checkbox" id="condition3" name="condition3" value="condition3">
-                <label for="option2"> Dying </label>
+                <label for="condition3"> Sick </label>
+                <input type="checkbox" id="condition4" name="condition4" value="condition4">
+                <label for="condition4"> Dying </label>
             </label>
-            <label>Post Date: <input type="date" id="pdate" name="pdate"></label>
-            <label>Exchange Preferences: <input type="checkbox" id="option1" name="option1" value="ship">
+
+            <label for="problem"> Do you notice any problem on your plant?
+                <input type="radio" name="problem" id="has_problem" required>
+                <label for="has_problem">Yes</label>
+                <input type="radio" name="problem" id="no_problem" required>
+                <label for="no_problem">No</label>
+                <button type="button">Click Here to Help You Diagnose Plant Problems</button><br>
+                <label for="pdes">If "Yes", please tell what problem do you see:<br>
+                    <textarea id="pdes" name="pdes"></textarea>
+                </label>
+            </label>
+
+            <!-- <label for="pdate">Post Date: <input type="date" id="pdate" name="pdate" required></label> -->
+
+            <label>Exchange Preferences:
+                <input type="checkbox" id="option1" name="option1" value="ship">
                 <label for="option1"> Ship</label>
                 <input type="checkbox" id="option2" name="option2" value="inPerson">
                 <label for="option2"> In-person</label>
             </label>
-            <button>Add to Swap List</button>
-        </form>
 
+            <label for="pdescription">Description:
+                <textarea id="pdescription" name="pdescription"></textarea>
+            </label>
+
+            <button type="submit" id="submitBtn">Add to Swap List</button>
+        </form>
     </div>
 
     <div class="swaplist-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis fugit, atque maxime vitae reprehenderit ratione eum doloribus blanditiis, quos eligendi hic tempore ut, placeat impedit culpa magnam velit minus alias?
+        <h1> div to add list</h1>
     </div>
 
 
-
+    <script src="./src/index.js"></script>
+    
 </body>
 
 </html>
