able to get the pname input value and store on a new div element

--- a/The Document Object Model/index.html
+++ b/The Document Object Model/index.html
@@ -48,9 +48,9 @@
             </label>
 
             <label for="problem"> Do you notice any problem on your plant?
-                <input type="radio" name="problem" id="has_problem" required>
+                <input type="radio" name="problem" id="has_problem" >
                 <label for="has_problem">Yes</label>
-                <input type="radio" name="problem" id="no_problem" required>
+                <input type="radio" name="problem" id="no_problem">
                 <label for="no_problem">No</label>
                 <button type="button">Click Here to Help You Diagnose Plant Problems</button><br>
                 <label for="pdes">If "Yes", please tell what problem do you see:<br>
@@ -67,8 +67,8 @@
                 <label for="option2"> In-person</label>
             </label>
 
-            <label for="pdescription">Description:
-                <textarea id="pdescription" name="pdescription"></textarea>
+            <label for="pdes">Description:
+                <textarea id="pdes" name="pdes"></textarea>
             </label>
 
             <button type="submit" id="submitBtn">Add to Swap List</button>
