Created a Plant object to store each time button click add

--- a/The Document Object Model/index.html
+++ b/The Document Object Model/index.html
@@ -123,7 +123,7 @@
                     <td>Commons</td>
                 </tr>
             </thead>
-            <tbody id=info-tbody>
+            <tbody id=infoTableBody>
 
             </tbody>
         </table>
