add funtion that loops through checked checkbox and return as a array

--- a/The Document Object Model/index.html
+++ b/The Document Object Model/index.html
@@ -86,11 +86,11 @@
             <!-- Exchange Preferences -->
             <label>Exchange Preferences: </label>
             <label for="option1">
-                <input type="checkbox" id="option1" name="option1" class="option">
+                <input type="checkbox" id="option1" name="option1" class="option" value="Ship">
                 Ship
             </label>
             <label for="option2">
-                <input type="checkbox" id="option2" name="option2" class="option">
+                <input type="checkbox" id="option2" name="option2" class="option" value="In-person">
                 In-person
             </label>
 
