--- a/The Document Object Model/index.html
+++ b/The Document Object Model/index.html
@@ -21,7 +21,7 @@
 
     <div class="form-container">
 
-        <form>
+        <form id="swap-from">
             <!-- Plant Name -->
             <label for="pname">Plant Name:
                 <input type="text" id="pname" name="pname"></label>
@@ -102,8 +102,8 @@
             <!-- Post Date -->
             <label for="pdate">Post Date: <input type="date" id="pdate" name="pdate"></label>
 
-            <button type="submit" id="submitBtn">Add to Swap List</button>
-            <button type="button" id="ResetBtn">Reset</button>
+            <button type="submit" id="addBtn">Add to Swap List</button>
+            <button type="button" id="resetBtn">Reset</button>
         </form>
     </div>
 
