--- a/The Document Object Model/index.html
+++ b/The Document Object Model/index.html
@@ -73,7 +73,8 @@
                     <input type="radio" name="problem" id="no_problem" class="problem" value="no">
                     No
                 </label>
-                <button type="button">Click Here to Help You Diagnose Plant Problems</button>
+                <button type="button" onclick="problemBtn()">
+                    Click Here to Help You Diagnose Plant Problems</button>
 
                 <div id="additionalContent" style="display: none; ">
 
@@ -96,7 +97,7 @@
 
             <!-- Addtional Commons  -->
             <label for="pdes">Description: </label>
-            <textarea id="pdes" name="pdes" placeholder = "Enter description here... "></textarea>
+            <textarea id="pdes" name="pdes" placeholder="Enter description here... "></textarea>
 
 
             <!-- Post Date -->
